syntax = "proto3";

package service.account;

import "attributes/player.proto";

message LoginRequest {
  string username = 1;
  string password = 2;

  message Response {
    int32 error_code = 1;
    attributes.player.PlayerBaseInfo player_base_info = 2;
  }
}

message RegisterRequest {
  string username = 1;
  string password1 = 2;
  string password2 = 3;

  message Response { int32 error_code = 1; }
}
